--- a/fastcrypto/Cargo.toml
+++ b/fastcrypto/Cargo.toml
@@ -131,3 +131,6 @@ radix64 = "0.6.2"
 base58 = "0.2.0"
 rust-base58 = "0.0.4"
 bcs.workspace = true
+
+[patch.crates-io]
+secp256k1 = { git = "https://github.com/rust-bitcoin/rust-secp256k1", features = ["recovery", "rand-std", "bitcoin_hashes", "global-context"] }
